@@ -120,12 +120,6 @@ class TestDLPHistoryMinimal(DLPBase):
     format = 'HISTORY'
 
 
-class TestDLPHistoryMinimal(DLPBase):
-    parser = mda.topology.DLPolyParser.HistoryParser
-    ref_filename = DLP_HISTORY_minimal_cell
-    format = 'HISTORY'
-
-
 class TestDLPHistoryOrder(DLPBase):
     parser = mda.topology.DLPolyParser.HistoryParser
     ref_filename = DLP_HISTORY_order
